# jpeg_decoder

./: CMakeLists.txt  README.md
jpeg-decoder-lib/: CMakeLists.txt  bitreader.cpp  bitreader.h  context.cpp  context.h  decoder.cpp  decoder.h  fft.cpp  fft.h  huffman.cpp  huffman.h  marker_controller.cpp  marker_controller.h  marker_handlers.cpp  marker_handlers.h
jpeg-decoder-lib/utils/: init.h
